maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:35: error: reassignment to val
  cpt=0
     ^PledgeMaze:38: error: reassignment to val
    cpt=cpt+ 1
       ^PledgeMaze:42: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:46: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:50: error: reassignment to val
  cpt=cpt-1
     ^